# 2026_Hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  analysis_results.csv  analysis_summary.json  docker-compose.yml  eslint.config.js  features_json_rgb.csv  index.html  package-lock.json  package.json  pyproject.toml  stt.py  stt_audio_features.csv  stt_audio_features_stt.csv  stt_audio_features_stt_summary.json  stt_audio_features_summary.json  video.py  vite.config.ts
Sample/outputs/: gaze_label_encoder_v3.pkl
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_scripts_and_modular_reports.py
app/: __init__.py  main.py
app/ai/: __init__.py  base.py  http.py  local_stt.py  mock.py  video_gaze.py
app/api/: deps.py  health.py
app/api/v1/: auth.py  scripts.py  sessions.py  websocket.py
app/core/: __init__.py  config.py  errors.py  logging.py  security.py
app/db/: session.py
app/db/models/: __init__.py  refresh_token.py  report.py  session.py  style_transfer.py  user.py
app/modules/: __init__.py  base.py
app/modules/pronunciation/: __init__.py  service.py
app/modules/script_sync/: __init__.py  service.py
app/modules/style_transfer/: __init__.py  service.py
app/realtime/: __init__.py  aggregator.py  events.py  pipeline.py  queues.py  registry.py  state.py  webrtc.py
app/schemas/: auth.py  script.py  session.py
app/services/: session_service.py
docs/: webrtc-contract.md
src/: App.tsx  styles.css
src/features/practice/: PracticePage.tsx  scriptTools.ts  types.ts
src/features/practice/components/: FeatureToggles.tsx  FeedbackOverlay.tsx  FeedbackPanel.tsx  KaraokeGuide.tsx  PresentationSetup.tsx  SessionControls.tsx  SessionSummary.tsx  StyleTransferPanel.tsx  VideoPreview.tsx
src/features/practice/hooks/: useBackendStreaming.ts  useFeedbackSocket.ts  useMockFeedback.ts  usePracticeSession.ts  useUserMedia.ts
src/lib/: realtimeProtocol.ts
tests/: conftest.py  test_auth.py  test_pipeline.py  test_scripts.py  test_session_flow.py
