[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realtime-feedback-backend"
version = "0.1.0"
description = "Real-time presentation and interview feedback backend"
requires-python = ">=3.12"
dependencies = [
  "aiortc>=1.9,<2",
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.5,<3",
  "pwdlib[argon2]>=0.2,<1",
  "PyJWT>=2.9,<3",
  "python-multipart>=0.0.12,<1",
  "redis>=5,<7",
  "SQLAlchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "av.*"
ignore_missing_imports = true
